modify readme file & add header section

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 
     <div class="top-banner">
     <div class="container">
-
+ 
         <div class="small-bold-text banner-text" >📣 Figma prototype testing just got a whole lot better! Read more →</div>
     </div>
     </div>
 
-
-
-
-    
+  
     <!-- navbar -->
      <nav>
         <div class="container main-nav flex ">
@@ -43,25 +40,33 @@
      </nav>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+     <!-- header -->
      <header>
-        <div class="container">
+        <div class="container header-section flex">
+
+            <div class="header-left">
+                <h1>Design confidently.</h1>
+                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by validating them with real users.</p>
+                <a href="#" class="primary-button gets-started-btn">Get started </a>
+            </div>
+            <div class="header-right">
+                <img src="asset/asset 2.jpeg" alt="">
+            </div>
+
 
         </div>
      </header>
+
+
+
+
+
+
+
+
+
+
+
 
      <section class="companies-section">
         <div class="container">
