--- a/index.html
+++ b/index.html
@@ -197,12 +197,37 @@
      </section>
 
 
+     <!-- example-section -->
+     <section class=" example-section">
+        <div class="container">
+            <div class="example-header flex">
+                <h2 class="examples-headeing-text">One platform, endless possibilities</h2>
+                <a href="#" class="secondary-button">see all example →</a>
+            </div>
+            <div class="exaples-area flex">
+
+                    <a href="#" class="example-card">
+                     <h3 class="card-text"> Can user completema task in my software interface</h3>
+                    </a> 
+
+                    <a href="#" class="example-card">
+                     <h3 class="card-text">Can users find important pages on my website?</h3>
+                    </a> 
+
+                    <a href="#" class="example-card">
+                     <h3 class="card-text"> Is my website’s intended audience clear?</h3>
+                    </a> 
+
+                    <a href="#" class="example-card">
+                     <h3 class="card-text">
+                        Do visitors understand what a page is about?</h3>
+                    </a> 
+            </div> 
+        </div>
+     </section>
 
 
 
-
-
-     <section class=" example-section"></section>
 
      <section class=" cta-section"></section>
 
