created resposive & first break point on 991px

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css".css">
     <title>webside</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
                     <li><a href="#" class="hover-link primary-button">Sing up</a></li>
                 </ul>
             </div>
-
+                <a href="#" class="nav-toggle hover-link"> <i class="fa-sharp fa-solid fa-bars"></i></a>
         </div>
      </nav>
 
